--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 .background-forest {
-    background-image: url("../assets/background/forest/background.png");
+    background-image: url("../assets/background/trianglifyforest.png");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@ html {
 }
 
 .background-western {
-    background-image: url("../assets/background/western/background.png");
+    background-image: url("../assets/background/trianglifywestern1.png");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -68,7 +68,8 @@ canvas {
     top: 50%;
     left: 50%;
     margin-top: -350px;
-    margin-left: -350px;
+    margin-left: -360px;
+
 }
 
 #game-background {
@@ -88,13 +89,26 @@ canvas {
 #info-game {
     top: 0;
     left: 0;
-    width: 260px;
+    width: 300px;
     position: absolute;
     z-index: 4;
-    background: linear-gradient(to bottom right, #00b901, #8fe938);
+/*     background: linear-gradient(to bottom right, #00b901, #8fe938);
+ */ 
+    /* background: transparent; */
+    background-color: rgba(255,255,255,0.3);
+    border-right: 5px solid black;
+    border-bottom:5px solid black;
     border-radius: 0% 0% 50% 0%;
     padding: 0% 2% 1% 2%;
     display: none;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(125,125,125,0.7);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(125,125,125,0.7);
+    box-shadow: 18px 2px 25px 10px rgba(125,125,125,0.5);
+    
+ 
+}
+p{
+    font-size: 16px;
 }
 
 .icon-ctrl {
@@ -109,6 +123,7 @@ canvas {
 .label-ctrl {
     margin-left: 30px;
     margin-right: 10px;
+    font-weight: bold;
 }
 
 .title-info {
@@ -133,41 +148,28 @@ canvas {
     display: none;
 }
 
-.triangle-git {
+.link{
     position: fixed;
     right: 0;
     z-index: 10;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 150px 150px 0;
-    border-color: transparent #00b901 transparent transparent;
+    display: block
 }
-.triangle-git:hover {
-    border-color: transparent #6ce96c transparent transparent;
+.link-git{
+    margin: 15px 15px 0px 0px;
+}
+.link-cv{
+    margin: 0px 15px 15px 0px;
+    bottom: 0;
+}
+.link:hover{
+    opacity: 0.7;
 }
 .img-git{
     width: 64px;
     height: 64px;
-    margin: 15px 0px 0px 75px;
 }
 
-.triangle-cv{
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    z-index: 10;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 0 0 150px 150px;
-    border-color: transparent transparent #00b901 transparent;
-}
-.triangle-cv:hover {
-    border-color: transparent transparent #6ce96c transparent;
-}
 .img-pdf{
     width: 64px;
     height: 64px;
-    margin: 75px 0 0 -75px;
 }
