--- a/css/style.css
+++ b/css/style.css
@@ -164,12 +164,7 @@ p{
 .link:hover{
     opacity: 0.7;
 }
-.img-git{
-    width: 64px;
-    height: 64px;
-}
-
-.img-pdf{
+.img-link{
     width: 64px;
     height: 64px;
 }
